Fix spacing in header on mobile view

--- a/public/css/recycling.css
+++ b/public/css/recycling.css
@@ -36,6 +36,7 @@ p {
   font-family: 'Teko', sans-serif;
   font-size: 32px;
   letter-spacing:2px;
+  line-height: 1;
   text-transform: uppercase;
 }
 
